# zifmann.tech

./: Cargo.toml  Dockerfile  file
src/: main.rs
static/: 404.html  blog.html  blogstyle.css  index.html  style.css
static/blog/: index.html  index_skeleton.html  script.js  search.js  skeleton.html  style.css  syntax_highlighter.js  syntax_highlighter.ts  test.html
static/blog/posts/2023/10/: 1_ai_stuff.html  28_static_blog_site_with_markdown_and_obsidian.html  2_another_dummy_.html  3_another_dummy_post.html  4_dummy_blog_post.html  5_iot_stuff.html  6_simple_blog_using_markdown.html
static/blog/posts/2023/11/: 4_programming_language_first_entry.html
static/blog/posts/2023/Oct/: ai_stuff.html  another_dummy_.html  another_dummy_post.html  dummy_blog_post.html  iot_stuff.html  simple_blog_using_markdown.html
