[package]
name = "zifmanntech"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
env_logger = "0.10.0"
log = "0.4.20"
logger = "0.4.0"
regex = "1.10.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
